# app-djrest-01

./: .gitignore  db.sqlite3  main.py  manage.py  pyproject.toml  settings.py  urls.py
apps/core/api/: urls.py  views.py
apps/core/models/: base.py  cliente.py  vip.py
apps/core/services/: client_service.py  vip_service.py
apps/core/templatetags/: string_filters.py
apps/users/: admin.py  permissions.py  views.py
my_django_project_001/: asgi.py  settings.py  urls.py  wsgi.py
my_django_project_001/config/: database.py
templates/: add_client.html  client_table.html  customer_registration.html  dashboard-editor.html  dashboard-viewer.html  dashboard.html  logout_confirm.html  registration_success.html  signin.html  signup.html  vip_membership.html
